# sampletypes-rs

./: Cargo.toml  Readme.md
src/: lib.rs  mod_i24.rs  mod_u24.rs
